--- a/static/content/b/g5/40323253.md
+++ b/static/content/b/g5/40323253.md
@@ -14,24 +14,37 @@ pelican 網誌位置:<a href="http://cdw11-ag100.rhcloud.com/static/">http://cdw
 <h4>2.組長將組員加為協同者</h4>
 <h4>3.組員將個人的 Github Page 網頁放入 REAEME.md 檔案中。</h4>
 <h4>4.Git Clone 倉儲，且master為畫布，gh-pages為心得報告。</h4>
-<h4>5.組長創立Onshape並加組員為協同者。</h4>
-<h4>6.本人繪製25齒之齒輪，模數設定為2mm。</h4>
-<h4>7.將各人的齒輪與底板組合，並且調整角度進行嚙合。</h4>
-<h4>8.在master建立個人畫布，準備繪製2D圖。</h4>
-<h4>9.利用這學期所學，在畫布上進行五顆齒輪的嚙合。</h4>
-<h4>10.增加n4、n5變數，利用公式轉動齒輪角度進行嚙合。</h4>
-<h4>11.使用色碼表更改齒輪顏色。</h4>
 
+
+-----------------------------------------------
 <h2>2D齒輪配合。</h2>
 <img src="http://i.imgur.com/jGH3KFR.png"> 
 <img src="http://i.imgur.com/NoSnXqT.png"> 
 <img src="http://i.imgur.com/HHkAZZF.png"> 
-
+<h4>1.建立個人畫布，準備繪製2D圖。</h4>
+<h4>2.利用這學期所學，在畫布上進行五顆齒輪的嚙合。</h4>
+<h4>3.增加n4、n5變數，利用公式轉動齒輪角度進行嚙合。</h4>
+<h4>4.使用色碼表更改齒輪顏色。</h4>
+-----------------------------------------------
+<h2>2D幾何圖。</h2>
+<img src="http://i.imgur.com/QK2qPqc.png"> 
+<img src="http://i.imgur.com/rDFHX13.png"> 
+<img src="http://i.imgur.com/kPhC3DZ.png"> 
+<img src="http://i.imgur.com/blBi2Sr.png"> 
+<h4>1.繪製草圖，並且長出。</h4>
+<h4>2.將圖檔轉為svg檔</h4>
+<h4>3.將svg檔丟入SciTE，並將Options中的Wrap勾選。</h4>
+<h4>4.將路徑貼至畫布裡的chamber中。</h4>
+-----------------------------------------------
 <h2>3D齒輪配合。</h2>
 <a href="https://cad.onshape.com/documents/4a0f3c870751f01ee4527dc8/w/a38b85cf8b16eaa1d52599f9/e/40dcb1e72c21678324724daf">3D齒輪配合</a>
 </br>
 <img src="http://i.imgur.com/xz0EBI1.png"> 
+<h4>1.組長創立Onshape並加組員為協同者。</h4>
+<h4>2.本人繪製25齒之齒輪，模數設定為2mm。</h4>
+<h4>3.將各人的齒輪與底板組合，並且調整角度進行嚙合。</h4>
 </br>
+
 -----------------------------------------------
 </br>
 <h2>期末心得及自評:</h2>
