--- a/static/content/b/g5/40323253.md
+++ b/static/content/b/g5/40323253.md
@@ -18,7 +18,8 @@ pelican 網誌位置:<a href="http://cdw11-ag100.rhcloud.com/static/">http://cdw
 
 -----------------------------------------------
 <h2>2D齒輪配合。</h2>
-<img src="http://i.imgur.com/jGH3KFR.png"> 
+<a href="http://cdw11-40323253.rhcloud.com/bg5_40323253/hw_a">2D齒輪配合</a>
+<img src="http://i.imgur.com/ZUTmWQS.png"> 
 <img src="http://i.imgur.com/NoSnXqT.png"> 
 <img src="http://i.imgur.com/HHkAZZF.png"> 
 <h4>1.建立個人畫布，準備繪製2D圖。</h4>
@@ -27,6 +28,8 @@ pelican 網誌位置:<a href="http://cdw11-ag100.rhcloud.com/static/">http://cdw
 <h4>4.使用色碼表更改齒輪顏色。</h4>
 -----------------------------------------------
 <h2>2D幾何圖。</h2>
+<a href="http://cdw11-40323253.rhcloud.com/bg5_40323253_1/w18">2D幾何圖</a>
+<img src="http://i.imgur.com/FVg1oBa.png"> 
 <img src="http://i.imgur.com/QK2qPqc.png"> 
 <img src="http://i.imgur.com/rDFHX13.png"> 
 <img src="http://i.imgur.com/kPhC3DZ.png"> 
